달력, 로그인 구현

--- a/app/src/main/res/layout/calendar_item.xml
+++ b/app/src/main/res/layout/calendar_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -9,9 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosans_regular"
-        android:layout_marginTop="2dp"
-        android:layout_marginStart="2dp"
         android:gravity="center"
+        android:layout_marginStart="5dp"
         android:text="@string/default_number"
         android:textSize="15dp" />
 
