--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,33 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/hotDiary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
+        android:text="인기"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="@+id/main_toolbar"
+        app:layout_constraintEnd_toStartOf="@+id/todayDiary"
+        app:layout_constraintHorizontal_bias="0.927"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.571" />
+
+    <TextView
+        android:id="@+id/todayDiary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="164dp"
+        android:fontFamily="@font/notosans_regular"
+        android:text="오늘"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="@+id/main_toolbar"
+        app:layout_constraintEnd_toEndOf="@+id/main_toolbar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.571" />
+
+    <TextView
         android:id="@+id/toolbar_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,10 +53,10 @@
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="@+id/main_toolbar"
         app:layout_constraintEnd_toEndOf="@+id/main_toolbar"
-        app:layout_constraintHorizontal_bias="0.076"
+        app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/main_toolbar"
-        app:layout_constraintVertical_bias="0.432" />
+        app:layout_constraintVertical_bias="0.571" />
 
     <FrameLayout
         android:id="@+id/main_framelayout"
@@ -56,12 +83,7 @@
         android:layout_width="44dp"
         android:layout_height="44dp"
         app:layout_constraintBottom_toBottomOf="@+id/main_toolbar"
-        app:layout_constraintEnd_toEndOf="@+id/main_toolbar"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/main_toolbar"
-        app:layout_constraintStart_toStartOf="@+id/main_toolbar"
-        app:layout_constraintTop_toTopOf="@+id/main_toolbar"
-        app:layout_constraintVertical_bias="1.0"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
