--- a/app/src/main/res/layout/calendar_item.xml
+++ b/app/src/main/res/layout/calendar_item.xml
@@ -12,7 +12,8 @@
         android:gravity="center"
         android:layout_marginStart="5dp"
         android:text="@string/default_number"
-        android:textSize="15dp" />
+        android:textSize="15dp"
+        android:background="@drawable/selector_view"/>
 
     <LinearLayout
         android:id="@+id/add_linear"
