--- a/app/src/main/res/layout/calendar_item.xml
+++ b/app/src/main/res/layout/calendar_item.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    android:orientation="vertical"
+    android:clickable="true"
+    android:background="@android:color/transparent"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/calendar_date"
@@ -10,10 +13,10 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosans_regular"
         android:gravity="center"
+        android:layout_gravity="center"
         android:layout_marginStart="5dp"
         android:text="@string/default_number"
-        android:textSize="15dp"
-        android:background="@drawable/selector_view"/>
+        android:textSize="15dp"/>
 
     <LinearLayout
         android:id="@+id/add_linear"
