--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -12,7 +12,8 @@
         android:id="@+id/calendar_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -127,7 +128,6 @@
             android:id="@+id/calendar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="true"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="7" />
 
