--- a/app/src/main/res/layout/diarylist_item.xml
+++ b/app/src/main/res/layout/diarylist_item.xml
@@ -3,12 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardBackgroundColor="#F0F0F0"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/diarylist_cardview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="#FFFFFF"
+        app:contentPadding="15dp"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="2dp"
+        app:cardCornerRadius="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,8 +46,8 @@
                             android:id="@+id/diarylist_username"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/notosans_regular"
                             android:layout_marginStart="5dp"
+                            android:fontFamily="@font/notosans_regular"
                             android:text="name"
                             android:textStyle="bold" />
 
@@ -49,8 +55,8 @@
                             android:id="@+id/diarylist_timestamp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/notosans_regular"
                             android:layout_marginStart="5dp"
+                            android:fontFamily="@font/notosans_regular"
                             android:text="20.01.15" />
                     </LinearLayout>
 
@@ -58,17 +64,17 @@
                         android:id="@+id/diarylist_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
                         android:fontFamily="@font/notosans_regular"
                         android:text="title"
-                        android:layout_marginStart="5dp"
                         android:textSize="17sp" />
 
                     <TextView
                         android:id="@+id/diarylist_content"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/notosans_regular"
                         android:layout_marginStart="5dp"
+                        android:fontFamily="@font/notosans_regular"
                         android:text="content" />
 
 
