--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -35,7 +35,7 @@
             android:id="@+id/notification"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginStart="108dp"
+            android:layout_marginStart="96dp"
             android:src="@drawable/notification"
             android:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/username"
@@ -51,7 +51,7 @@
             android:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/username"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.695"
+            app:layout_constraintHorizontal_bias="0.542"
             app:layout_constraintStart_toEndOf="@+id/notification"
             app:layout_constraintTop_toTopOf="@+id/view"
             app:layout_constraintVertical_bias="0.0" />
@@ -66,6 +66,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="로그아웃하기"
+            app:layout_constraintBottom_toBottomOf="@+id/divider"
+            app:layout_constraintEnd_toEndOf="@+id/divider"
+            app:layout_constraintStart_toStartOf="@+id/divider"
+            app:layout_constraintTop_toBottomOf="@+id/username" />
 
         <View
             android:id="@+id/divider"
@@ -99,9 +109,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tabLayout"
             app:layout_constraintVertical_bias="0.0"
-           >
-
-        </androidx.viewpager.widget.ViewPager>
+           />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
