--- a/app/src/main/res/layout/diarylist_item.xml
+++ b/app/src/main/res/layout/diarylist_item.xml
@@ -11,14 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="#FFFFFF"
-        app:contentPadding="15dp"
+        app:contentPadding="20dp"
         app:cardUseCompatPadding="true"
         app:cardElevation="2dp"
         app:cardCornerRadius="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
@@ -28,57 +28,55 @@
 
                 <ImageView
                     android:id="@+id/diarylist_userProfileImage"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     app:srcCompat="@drawable/man" />
 
-                <LinearLayout
+
+                <TextView
+                    android:id="@+id/diarylist_username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="name"
+                    android:textSize="13sp" />
+
+                <TextView
+                    android:id="@+id/diarylist_timestamp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="200dp"
+                    android:text="20.01.15"
+                    android:textSize="10sp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:id="@+id/diarylist_title"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="title"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/diarylist_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:maxLines="5"
+                    android:ellipsize="end"
+                    android:text="content"
+                    android:textSize="13sp" />
 
-                        <TextView
-                            android:id="@+id/diarylist_username"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
-                            android:fontFamily="@font/notosans_regular"
-                            android:text="name"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/diarylist_timestamp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
-                            android:fontFamily="@font/notosans_regular"
-                            android:text="20.01.15" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/diarylist_title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:fontFamily="@font/notosans_regular"
-                        android:text="title"
-                        android:textSize="17sp" />
-
-                    <TextView
-                        android:id="@+id/diarylist_content"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:fontFamily="@font/notosans_regular"
-                        android:text="content" />
-
-
-                </LinearLayout>
 
             </LinearLayout>
 
