--- a/app/src/main/res/layout/fragment_my_diary.xml
+++ b/app/src/main/res/layout/fragment_my_diary.xml
@@ -3,11 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     tools:context=".Fragment.MyDiaryFragment">
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/swipeLayout2">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mydiary_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </FrameLayout>
