--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="45dp"
-                android:fontFamily="@font/notossans_bold"
+                android:fontFamily="@font/nanumsquareregular"
                 android:text="@string/name"
                 android:textColor="@color/colorPrimary" />
 
@@ -63,7 +63,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="45dp"
-                android:fontFamily="@font/notossans_bold"
+                android:fontFamily="@font/nanumsquareregular"
                 android:text="@string/email"
                 android:textColor="@color/colorPrimary" />
 
@@ -94,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="45dp"
-                android:fontFamily="@font/notossans_bold"
+                android:fontFamily="@font/nanumsquareregular"
                 android:text="@string/pw"
                 android:textColor="@color/colorPrimary" />
 
@@ -125,7 +125,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="45dp"
-                android:fontFamily="@font/notossans_bold"
+                android:fontFamily="@font/nanumsquareregular"
                 android:text="@string/pwcheck"
                 android:textColor="@color/colorPrimary" />
 
@@ -159,7 +159,8 @@
                 android:layout_marginLeft="45dp"
                 android:layout_marginRight="45dp"
                 android:background="@color/colorPrimary"
-                android:fontFamily="@font/notossans_bold"
+                android:fontFamily="@font/nanumsquareregular"
+                android:textStyle="bold"
                 android:text="@string/join"
                 android:textColor="@color/white" />
 
