--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/hotDiary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosans_regular"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="인기"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="@+id/main_toolbar"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="164dp"
-        android:fontFamily="@font/notosans_regular"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="오늘"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="@+id/main_toolbar"
@@ -48,7 +48,7 @@
         android:id="@+id/toolbar_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosans_regular"
+        android:fontFamily="@font/nanumsquareregular"
         android:text="@string/Home"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="@+id/main_toolbar"
