--- a/app/src/main/res/layout/diarylist_item.xml
+++ b/app/src/main/res/layout/diarylist_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/diarylist_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#FFFFFF"
+        app:cardBackgroundColor="@color/white"
         app:contentPadding="20dp"
         app:cardUseCompatPadding="true"
         app:cardElevation="2dp"
@@ -28,26 +28,38 @@
 
                 <ImageView
                     android:id="@+id/diarylist_userProfileImage"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     app:srcCompat="@drawable/man" />
 
 
-                <TextView
-                    android:id="@+id/diarylist_username"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:text="name"
-                    android:textSize="13sp" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/diarylist_timestamp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="200dp"
-                    android:text="20.01.15"
-                    android:textSize="10sp" />
+                    <TextView
+                        android:id="@+id/diarylist_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:text="name"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/nanumsquareregular"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/diarylist_timestamp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="20.01.15"
+                        android:fontFamily="@font/nanumsquareregular"
+                        android:layout_marginStart="10dp"
+                        android:textSize="14sp" />
+                </LinearLayout>
 
 
             </LinearLayout>
@@ -62,9 +74,12 @@
                     android:id="@+id/diarylist_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:layout_marginStart="5dp"
                     android:text="title"
-                    android:textSize="15sp"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/nanumsquareregular"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -72,10 +87,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:maxLines="5"
+                    android:maxLines="1"
                     android:ellipsize="end"
+                    android:layout_marginTop="3dp"
                     android:text="content"
-                    android:textSize="13sp" />
+                    android:fontFamily="@font/nanumsquareregular"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
 
 
             </LinearLayout>
